--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@
     font-family: "Lora", serif;
 
 }
+.navbarContainer
+{
+    justify-content: center;
+}
 
 .sameHeading {
     font-size: 1.8rem;
@@ -63,7 +67,13 @@ body>div {
     width: 100%;
 }
 
-.intro,img {
+.intro
+{
+    width: 100%;
+
+}
+
+img {
     width: 100%;
     height: 100%;
 }
@@ -85,9 +95,9 @@ body>div {
 
 .contentIntro {
     width: 100%;
-    height: 100vh;
+    height: 33rem;
     background-image: url('./images/replace_image_5.jpg');
-    background-size: 100% 80%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
@@ -96,13 +106,12 @@ body>div {
 }
 
 .postJob {
-    margin-left: 7%;
     padding: 6px 35px
 }
 
 .searchIntro {
     padding: 5px 5px;
-    width: 52%;
+    width: 45%;
     background-color: white
 }
 
@@ -205,7 +214,7 @@ hr {
     width: 18rem;
 }
 
-.searchIntro,.plansCard:hover,.contentPart:hover,.categoryCards>.card:hover {
+.searchIntro,.plansCard:hover {
     box-shadow: 1px 1px 3px #0e0f0f;
 }
 
@@ -283,4 +292,9 @@ background-color: #1baba1;
 
 .workCard .card:hover {
     border: 1px solid black;
+}
+
+.companyNameGoogle
+{
+    width: 38% !important;
 }
